--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_constanciaservicios.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="10" uuid="61040501-82b0-436f-934f-a899fdfcb57e">
 	<property name="ireport.zoom" value="1.2100000000000009"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="171"/>
+	<property name="ireport.y" value="204"/>
 	<style name="table">
 		<box>
 			<pen lineWidth="1.0" lineColor="#000000"/>
@@ -107,7 +107,8 @@
  join experiencialaboral el on eel.codigoexperiencialaboral=el.codigoexperiencialaboral
  WHERE e.codigoempleado=$P{CODIGO} and
  
-c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainiciocontrato<= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y')]]>
+c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainiciocontrato<= STR_TO_DATE($P{FECHAFIN}, '%d/%m/%Y') and 
+d.estadodescuento != 0 and c.estadocontrato != 0 and el.estadoexp != 0]]>
 	</queryString>
 	<field name="Empleado" class="java.lang.String"/>
 	<field name="desde" class="java.lang.String"/>
@@ -249,7 +250,10 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainici
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="431" splitType="Stretch">
+		<band height="159" splitType="Stretch">
+			<rectangle>
+				<reportElement x="48" y="144" width="467" height="14" uuid="e44c421d-fee5-428e-84f8-b89ecb44f2ab"/>
+			</rectangle>
 			<staticText>
 				<reportElement x="59" y="10" width="490" height="20" uuid="09219d49-c4bb-44ca-809b-977e524160d2"/>
 				<textElement>
@@ -267,118 +271,7 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainici
 			<elementGroup>
 				<elementGroup>
 					<elementGroup>
-						<elementGroup>
-							<elementGroup>
-								<componentElement>
-									<reportElement key="table 2" style="table 2" x="63" y="96" width="180" height="140" uuid="c509a78c-93f5-4c95-ad9d-4cf64d1b0af8"/>
-									<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-										<datasetRun subDataset="servicios" uuid="1f8aca59-939d-4d23-b6ca-d7534f142396">
-											<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-										</datasetRun>
-										<jr:column width="74" uuid="9292885b-c9ad-474c-a005-98ef35930713">
-											<jr:columnHeader style="table 1" height="22" rowSpan="1">
-												<staticText>
-													<reportElement x="0" y="2" width="74" height="20" backcolor="#000000" uuid="fbbd9aec-f2ec-4147-a633-16a6216b46fb"/>
-													<textElement textAlignment="Center">
-														<font fontName="Times New Roman" size="9" isBold="true"/>
-													</textElement>
-													<text><![CDATA[Desde]]></text>
-												</staticText>
-											</jr:columnHeader>
-											<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
-												<textField isStretchWithOverflow="true">
-													<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="67" height="14" uuid="fa299990-5e13-400c-b270-607ec0986b17"/>
-													<textElement textAlignment="Right">
-														<font fontName="Times New Roman" size="9"/>
-													</textElement>
-													<textFieldExpression><![CDATA[$F{desde}]]></textFieldExpression>
-												</textField>
-											</jr:detailCell>
-										</jr:column>
-										<jr:column width="80" uuid="a13127f2-20c1-4afc-b031-77affacf0713">
-											<jr:columnHeader style="table 1" height="22" rowSpan="1">
-												<staticText>
-													<reportElement x="0" y="2" width="80" height="20" backcolor="#000000" uuid="b5c8b394-3799-44b5-9db5-4d8ec3be04f9"/>
-													<textElement textAlignment="Center">
-														<font fontName="Times New Roman" size="9" isBold="true"/>
-													</textElement>
-													<text><![CDATA[Hasta]]></text>
-												</staticText>
-											</jr:columnHeader>
-											<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
-												<textField isStretchWithOverflow="true">
-													<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="67" height="14" uuid="ff3c57e5-767a-4761-be5e-d7c4dc37352e"/>
-													<textElement textAlignment="Right">
-														<font fontName="Times New Roman" size="9"/>
-													</textElement>
-													<textFieldExpression><![CDATA[$F{hasta}]]></textFieldExpression>
-												</textField>
-											</jr:detailCell>
-										</jr:column>
-										<jr:column width="117" uuid="5d47b0ff-9507-4f29-a8f3-9d3be5d9c1c7">
-											<jr:columnHeader style="table 1" height="22" rowSpan="1">
-												<staticText>
-													<reportElement x="0" y="2" width="90" height="20" backcolor="#CCCCCC" uuid="42eb79f9-250e-423a-b2ff-b4f0023fb985"/>
-													<textElement textAlignment="Center">
-														<font fontName="Times New Roman" size="9" isBold="true"/>
-													</textElement>
-													<text><![CDATA[Plaza Nominal]]></text>
-												</staticText>
-											</jr:columnHeader>
-											<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
-												<textField isStretchWithOverflow="true">
-													<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="11" y="0" width="106" height="14" uuid="4972f561-3d8c-4b87-919f-30f9e74357e9"/>
-													<textElement>
-														<font fontName="Times New Roman" size="9"/>
-													</textElement>
-													<textFieldExpression><![CDATA[$F{plazanominal}]]></textFieldExpression>
-												</textField>
-											</jr:detailCell>
-										</jr:column>
-										<jr:column width="78" uuid="16d9f379-f917-4e7e-ae9e-7fbcd18bdfab">
-											<jr:columnHeader style="table 1" height="22" rowSpan="1">
-												<staticText>
-													<reportElement x="0" y="2" width="78" height="20" backcolor="#CCCCCC" uuid="c3c55e81-31fc-4c52-b727-d056d798f184"/>
-													<textElement textAlignment="Center">
-														<font fontName="Times New Roman" size="9" isBold="true"/>
-													</textElement>
-													<text><![CDATA[Salario($)]]></text>
-												</staticText>
-											</jr:columnHeader>
-											<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
-												<textField isStretchWithOverflow="true">
-													<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="68" height="14" uuid="4cb57f53-97b1-476b-bcb7-7c792b1e3552"/>
-													<textElement textAlignment="Right">
-														<font fontName="Times New Roman" size="9"/>
-													</textElement>
-													<textFieldExpression><![CDATA[new DecimalFormat("###,###,##0.00").format($F{salarioactual})]]></textFieldExpression>
-												</textField>
-											</jr:detailCell>
-										</jr:column>
-										<jr:column width="84" uuid="9be77bd4-b841-4de0-b078-78b2d9665371">
-											<jr:columnHeader style="table 1" height="22" rowSpan="1">
-												<staticText>
-													<reportElement x="0" y="2" width="82" height="20" backcolor="#000000" uuid="1d9b1e2a-5ef6-42e6-b28f-8e87c04bbe3b"/>
-													<textElement textAlignment="Center">
-														<font fontName="Times New Roman" size="9" isBold="true"/>
-													</textElement>
-													<text><![CDATA[Sistema Pago]]></text>
-												</staticText>
-											</jr:columnHeader>
-											<jr:detailCell style="table 2_TD" height="20" rowSpan="1">
-												<textField isStretchWithOverflow="true">
-													<reportElement positionType="Float" stretchType="RelativeToTallestObject" x="8" y="0" width="74" height="14" uuid="443f1d85-e964-457b-997a-59ea358031c0"/>
-													<textElement>
-														<font fontName="Times New Roman" size="9"/>
-													</textElement>
-													<textFieldExpression><![CDATA[$F{sistemapago}]]></textFieldExpression>
-												</textField>
-											</jr:detailCell>
-										</jr:column>
-									</jr:table>
-								</componentElement>
-							</elementGroup>
-						</elementGroup>
+						<elementGroup/>
 					</elementGroup>
 				</elementGroup>
 			</elementGroup>
@@ -399,7 +292,7 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainici
 			<staticText>
 				<reportElement x="63" y="64" width="214" height="14" uuid="d63f39b9-1377-4351-b2c4-2e881d66126d"/>
 				<textElement>
-					<font fontName="Times New Roman"/>
+					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[detallados en el siguiente cuadro.]]></text>
 			</staticText>
@@ -411,83 +304,189 @@ c.fechainiciocontrato>=STR_TO_DATE($P{FECHAINICIO}, '%d/%m/%Y') and c.fechainici
 				<text><![CDATA[Hace Constar que]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="63" y="278" width="339" height="14" uuid="394c8f14-e0c3-4f75-af14-a0665edbf237"/>
+				<reportElement x="49" y="144" width="80" height="14" uuid="12e51043-348f-4fff-acfe-4418766efd0d"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Fecha Inicial]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="137" y="145" width="64" height="14" uuid="8345fc6e-fb1b-454a-8bb2-032ccc8a2791"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Fecha Final]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="210" y="145" width="100" height="14" uuid="5686b3ec-16e6-4374-8e6d-7b5585158ed4"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Plaza Nominal]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="310" y="145" width="100" height="14" uuid="826914d4-1358-41be-ba26-de98fd8f2c47"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Salario Actual]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="413" y="144" width="100" height="14" uuid="87c682d3-033e-4733-ae1d-f0f8e9041504"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Sistema de Pago]]></text>
+			</staticText>
+			<line>
+				<reportElement x="133" y="144" width="1" height="15" uuid="a8ab733a-8722-40cf-ba62-8894e936d630"/>
+			</line>
+			<line>
+				<reportElement x="206" y="144" width="1" height="14" uuid="19a497d0-0593-4ff0-9f68-7df3b1f7630c"/>
+			</line>
+			<line>
+				<reportElement x="310" y="143" width="1" height="14" uuid="f6cf013a-5d52-4fad-995f-b3d423f8adc8"/>
+			</line>
+			<line>
+				<reportElement x="412" y="145" width="1" height="14" uuid="019fb4b5-c4bd-4acd-93ed-756d1850beb6"/>
+			</line>
+		</band>
+	</columnHeader>
+	<detail>
+		<band height="15" splitType="Stretch">
+			<textField>
+				<reportElement x="49" y="0" width="80" height="14" uuid="531668ef-d9a8-48cf-b82e-5f53502da4e0"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{desde}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="311" y="0" width="99" height="14" uuid="c186d84e-5206-4cb8-8034-c57f95376e14"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{salarioactual}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement x="133" y="0" width="1" height="14" uuid="fb319854-9d84-4bf1-82c2-9c69c4d03f11"/>
+			</line>
+			<line>
+				<reportElement x="206" y="-1" width="1" height="14" uuid="df19c8dd-20c5-4483-a43e-685049cdfbd1"/>
+			</line>
+			<line>
+				<reportElement x="310" y="-1" width="1" height="14" uuid="41cb2bd7-9755-46f9-bd89-897b5945951f"/>
+			</line>
+			<line>
+				<reportElement x="412" y="-2" width="1" height="14" uuid="ba74b9ae-1e12-4a2c-81c9-47da336053da"/>
+			</line>
+			<line>
+				<reportElement x="48" y="13" width="468" height="1" uuid="961b79d1-6fa3-4be6-a6a4-b2084e19aa82"/>
+			</line>
+			<line>
+				<reportElement x="48" y="-2" width="1" height="14" uuid="a390802a-e329-4fcb-b8c5-2e1a93e0b257"/>
+			</line>
+			<line>
+				<reportElement x="515" y="-2" width="1" height="14" uuid="a5700238-9663-4308-9d6f-f9283148b3d6"/>
+			</line>
+			<textField>
+				<reportElement x="145" y="1" width="60" height="14" uuid="cb53c4dc-cf58-4bb7-ad6a-7988d1cefeaa"/>
+				<textElement textAlignment="Right">
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{hasta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="209" y="1" width="101" height="14" uuid="8963571c-9918-4a3b-9a60-09e76fa619e3"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{plazanominal}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="416" y="1" width="90" height="14" uuid="b4063267-6e6a-4785-a19f-daf829582ef7"/>
+				<textElement>
+					<font fontName="Times New Roman" size="9"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{sistemapago}]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
+	<columnFooter>
+		<band height="176" splitType="Stretch">
+			<staticText>
+				<reportElement x="45" y="23" width="339" height="14" uuid="394c8f14-e0c3-4f75-af14-a0665edbf237"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[sin tachaduras por un periodo de treinta dias, dada en la ciudad de San Salvador,]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="167" y="264" width="110" height="14" uuid="bd96b35e-2027-44db-8ef7-f2a33f1e78ab"/>
+				<reportElement x="149" y="9" width="110" height="14" uuid="bd96b35e-2027-44db-8ef7-f2a33f1e78ab"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreinstitucion}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="62" y="264" width="103" height="14" uuid="c9c12a21-fa4b-40a4-b108-ab19c911e8ff"/>
+				<reportElement x="44" y="9" width="103" height="14" uuid="c9c12a21-fa4b-40a4-b108-ab19c911e8ff"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Y para ser presentado  a]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="275" y="264" width="241" height="14" uuid="bdd38e56-7f0b-4f58-bcf9-6fcf176cd03a"/>
+				<reportElement x="257" y="9" width="241" height="14" uuid="bdd38e56-7f0b-4f58-bcf9-6fcf176cd03a"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[, se extiende la presente,la cual tendra validez y en original]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="63" y="293" width="339" height="14" uuid="041762ee-ea15-402a-a0d3-0db966985ed6"/>
+				<reportElement x="45" y="38" width="339" height="14" uuid="041762ee-ea15-402a-a0d3-0db966985ed6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA["DIOS UNION LIBERTAD"]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="399" y="278" width="100" height="14" uuid="1e6ddd8d-2409-4c2c-aca0-d6e6367e3594"/>
+				<reportElement x="381" y="23" width="100" height="14" uuid="1e6ddd8d-2409-4c2c-aca0-d6e6367e3594"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9" isBold="true" isUnderline="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{DATE_FORMAT(CURRENT_DATE, '%d/%m/%Y')}]]></textFieldExpression>
 			</textField>
+		</band>
+	</columnFooter>
+	<pageFooter>
+		<band height="220" splitType="Stretch">
 			<staticText>
-				<reportElement x="198" y="365" width="160" height="14" uuid="8f6f5c41-856f-40c3-b81e-403509a9e80d"/>
+				<reportElement x="192" y="39" width="160" height="14" uuid="8f6f5c41-856f-40c3-b81e-403509a9e80d"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Ministerio de Justicia y Seguridad Pública]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="213" y="337" width="115" height="14" uuid="96fc222c-4147-4025-bc25-c0b24ed417ef"/>
+				<reportElement x="207" y="11" width="115" height="14" uuid="96fc222c-4147-4025-bc25-c0b24ed417ef"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Coordinador de Personal]]></text>
 			</staticText>
 			<line>
-				<reportElement x="178" y="335" width="185" height="1" uuid="b0b4dd2a-b2df-406d-8593-51a9240fcb4c"/>
+				<reportElement x="172" y="9" width="185" height="1" uuid="b0b4dd2a-b2df-406d-8593-51a9240fcb4c"/>
 			</line>
 			<staticText>
-				<reportElement x="199" y="351" width="135" height="14" uuid="6c8f3ff2-52e3-40ac-b807-b023ddb3205b"/>
+				<reportElement x="193" y="25" width="135" height="14" uuid="6c8f3ff2-52e3-40ac-b807-b023ddb3205b"/>
 				<textElement>
 					<font fontName="Times New Roman" size="9"/>
 				</textElement>
 				<text><![CDATA[Dirección de Recursos Humanos]]></text>
 			</staticText>
 		</band>
-	</columnHeader>
-	<detail>
-		<band height="14" splitType="Stretch"/>
-	</detail>
-	<columnFooter>
-		<band height="45" splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band height="54" splitType="Stretch"/>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="14" splitType="Stretch"/>
 	</summary>
 </jasperReport>
